--- a/htmlsrc/linktypes/LINKTYPE_FIRA_UCI.html
+++ b/htmlsrc/linktypes/LINKTYPE_FIRA_UCI.html
@@ -27,7 +27,7 @@ FiRa Consortium UWB Command Interface Generic Technical Specification</a>.
 
                 <h2 class="subtitle">Description</h2>
 Unless otherwise indicated, the byte ordering for UCI packets is little-endian.
-The packet header contains the following fields, listed from most most significant
+The packet header contains the following fields, listed from most significant
 to least significant bits:
 <ul>
 <li>Message Type (MT), 3 Bits
