--- a/manpages/libpcap-1.6.2/pcap_set_tstamp_type.3pcap.html
+++ b/manpages/libpcap-1.6.2/pcap_set_tstamp_type.3pcap.html
@@ -32,7 +32,7 @@ capture device
 
 <B>pcap_set_tstamp_type()</B>
 
-sets the the type of time stamp desired for packets captured on the pcap
+sets the type of time stamp desired for packets captured on the pcap
 descriptor to the type specified by
 <I>tstamp_type</I>.
 
