--- a/manpages/tcpdump.1-4.5.1.html
+++ b/manpages/tcpdump.1-4.5.1.html
@@ -1733,7 +1733,7 @@ The op (Query) and response code
 <P>
 
 In the second example, <I>helios</I> responds to query 2 with a
-response code of non-existent domain (NXDomain) with no answers,
+response code of nonexistent domain (NXDomain) with no answers,
 one name server and no authority records.
 The `*' indicates that
 the <I>authoritative answer</I> bit was set.
