--- a/manpages/tcpdump.1-4.99.1.html
+++ b/manpages/tcpdump.1-4.99.1.html
@@ -536,7 +536,7 @@ which should include a time format as defined by
 
 If no time format is specified, each new file will overwrite the previous.
 Whenever a generated filename is not unique, tcpdump will overwrite the
-pre-existing data; providing a time specification that is coarser than the
+preexisting data; providing a time specification that is coarser than the
 capture period is therefore not advised.
 <DT><DD>
 If used in conjunction with the
