--- a/manpages/libpcap-1.9.1/rpcapd.8.html
+++ b/manpages/libpcap-1.9.1/rpcapd.8.html
@@ -225,7 +225,7 @@ argument to connect to this server.
 <I>host_list</I>
 
 is a list of host names or IP addresses, separated by commas.
-We suggest that you use use host names rather than literal IP addresses
+We suggest that you use host names rather than literal IP addresses
 in order to avoid problems with different address families.
 <DT><B>-n</B>
 
